fix horizontal overflow on windows

--- a/newamericadotorg/assets/scss/base/_initial.scss
+++ b/newamericadotorg/assets/scss/base/_initial.scss
@@ -23,7 +23,7 @@ html, body{
   font-family: $label-font-family;
   margin: 0;
   padding: 0;
-  width: 100vw;
+  width: 100%;
 }
 
 body.scroll-disabled {
